2007-01-29  Chris Morley

	I/O rewritten to improve code isolation and allow TinyXML
	to be replaced if necessary. See description in Persistence.h
	
	* src/XMLPersist.h, src/XMLPersist.cpp added.
	* src/Persistence.cpp removed
	* src/util.cpp added. Contains formatFloat(), now a global
	function.
	
	Extensive changes to:
	* src/Persistence.h, (IPersistObject rename to IPersist)
	and most other files.
	
2007-01-18  Chris Morley
	
	* src/Persistence.h, Persistence.cpp: Added output utility
	functions WriteElement(), WriteMainElement() and 
	WriteValueElement(). In IPersistObject at present, but maybe
	they should be elswhere.
	
	* src/Molecule.h, Reaction.h: Added member variable to retain
	object address in XML document.
	
	* src/Molecule.cpp(testDensityOfStates): Output also to XML
	
	* src/Reaction.cpp(testMicroRateCoeffs): Output also to XML
	
	* src/pentyl_isomerization.xml: Correct extra " typos
	
	* Windows VC8/Mesmer/mesmer1.xsl: Added. Provides formating when
	XML file viewed in a browser.

2007-01-18  Chris Morley

	* tinyxml/tinyxmlparser.cpp: small patch to allow xml-stylesheet
	instuction to be passed on. See:
	http://sourceforge.net/tracker/index.php?func=detail&aid=1618031&group_id=13559&atid=313559

	* src/main.cpp: Can specify output file with default of adding
	out before extension on inputfile name. Added usage function and some exit codes.

2007-05-20  Struan Robertson

	* src/ReactionManager.cpp/.h: Altered so that it no longer uses the
        ReactionConnectivety class.

        * src/MoleculeManager.cpp/.h: Accessor methods added to locate the bath 
        gas molecule. This is required in the calculation of bath collision 
        frequencies. Knock on changes required to Molecule.cpp/.h and System.cpp/
        .h
